--- a/AR Ping Pong/AR Ping Pong/Base.lproj/Main.storyboard
+++ b/AR Ping Pong/AR Ping Pong/Base.lproj/Main.storyboard
@@ -183,10 +183,10 @@
                                 </connections>
                             </button>
                             <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c1b-WL-r35" userLabel="Reset Button">
-                                <rect key="frame" x="15" y="15" width="30" height="30"/>
+                                <rect key="frame" x="15" y="15" width="35" height="35"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="IuU-YP-f8e"/>
-                                    <constraint firstAttribute="width" constant="30" id="YOy-4C-EeY"/>
+                                    <constraint firstAttribute="height" constant="35" id="IuU-YP-f8e"/>
+                                    <constraint firstAttribute="width" constant="35" id="YOy-4C-EeY"/>
                                 </constraints>
                                 <state key="normal" image="Reset"/>
                                 <connections>
@@ -199,7 +199,17 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="xON-gA-fYZ"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
+                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="28"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label hidden="YES" opaque="NO" clipsSubviews="YES" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="LCP-SV-dVy" userLabel="Final Label">
+                                <rect key="frame" x="134" y="88" width="400" height="200"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.75294306509999998" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="5YK-XY-d2L"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="38"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -219,10 +229,13 @@
                             <constraint firstItem="kF2-nH-ILj" firstAttribute="width" secondItem="k7W-jO-VB6" secondAttribute="width" multiplier="0.333" id="KM2-vu-vLy"/>
                             <constraint firstItem="c1b-WL-r35" firstAttribute="top" secondItem="k7W-jO-VB6" secondAttribute="top" constant="15" id="P11-xg-WBJ"/>
                             <constraint firstItem="kF2-nH-ILj" firstAttribute="top" secondItem="k7W-jO-VB6" secondAttribute="top" constant="15" id="PS7-kr-2zJ"/>
+                            <constraint firstItem="LCP-SV-dVy" firstAttribute="centerX" secondItem="k7W-jO-VB6" secondAttribute="centerX" id="RME-ZP-6KU"/>
                             <constraint firstItem="k0v-nR-o8n" firstAttribute="top" secondItem="k7W-jO-VB6" secondAttribute="top" id="Uts-cf-fKZ"/>
                             <constraint firstItem="PQn-nC-O1z" firstAttribute="top" secondItem="k7W-jO-VB6" secondAttribute="top" constant="15" id="bVc-hS-1PM"/>
+                            <constraint firstItem="LCP-SV-dVy" firstAttribute="centerY" secondItem="k7W-jO-VB6" secondAttribute="centerY" id="cGY-M6-Ba2"/>
                             <constraint firstItem="PQn-nC-O1z" firstAttribute="width" secondItem="k7W-jO-VB6" secondAttribute="width" multiplier="0.5" id="hVq-v4-Fgu"/>
                             <constraint firstItem="k0v-nR-o8n" firstAttribute="leading" secondItem="k7W-jO-VB6" secondAttribute="leading" id="o76-BV-2at"/>
+                            <constraint firstItem="LCP-SV-dVy" firstAttribute="width" secondItem="k7W-jO-VB6" secondAttribute="width" multiplier="0.6" id="qBr-Qx-jqI"/>
                             <constraint firstItem="V5W-er-MRo" firstAttribute="centerY" secondItem="k7W-jO-VB6" secondAttribute="centerY" id="xf8-Ha-vhV"/>
                             <constraint firstItem="c1b-WL-r35" firstAttribute="leading" secondItem="k7W-jO-VB6" secondAttribute="leading" constant="15" id="xrr-aa-uN7"/>
                         </constraints>
@@ -231,11 +244,13 @@
                     <connections>
                         <outlet property="crosshair" destination="Wgm-Ne-muk" id="Mf3-vg-1Oh"/>
                         <outlet property="errorLabel" destination="kF2-nH-ILj" id="UBi-gH-Zx0"/>
+                        <outlet property="finalLabel" destination="LCP-SV-dVy" id="lpu-Qf-K93"/>
                         <outlet property="progressButton" destination="V5W-er-MRo" id="Ocw-bL-Pxx"/>
-                        <outlet property="resetButton" destination="c1b-WL-r35" id="Qx4-gO-kPW"/>
+                        <outlet property="resetButton" destination="c1b-WL-r35" id="WfP-Xd-tJT"/>
                         <outlet property="scnView" destination="k0v-nR-o8n" id="dZb-oT-fyd"/>
                         <outlet property="scoreLabel" destination="PQn-nC-O1z" id="AqJ-7b-p54"/>
                         <outlet property="statusLabel" destination="rfy-m9-dfO" id="ZFI-pl-oxj"/>
+                        <segue destination="K1K-OF-xwC" kind="presentation" identifier="backSegue" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="0bJ-mH-GRy"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
